package command;

public class Hatsukaze {
    public void actionGame(Integer num) {
        System.out.println("本日" + num + "回目のティアキンをやるぞ！");
    }

    public void actionSleep(Integer num) {
        System.out.println("本日" + num + "回目の睡眠をとるよ……zzz");
    }
}
